# ccbot

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  README_CN.md  README_RU.md  SECURITY.md  gitleaks.toml  pyproject.toml  pyrightconfig.json
.claude/rules/: architecture.md  dm-architecture.md  output-format.md  secrets.md
.github/workflows/: secrets-scan.yml  test.yml
doc/: deploy.md  dm-multisession-plan.md  dm-multisession-spec.md  install-linux.md  upstream-drops.md
doc/operator-private/: README.md
scripts/: ccbot-supervisor.sh  ccbot.service  com.ccbot.plist  deploy.sh  install_whisper_model.sh  restart.sh
src/ccbot/: bot.py  config.py  hook.py  html_converter.py  i18n.py  local_terminal.py  logging_setup.py  main.py  markdown_v2.py  metrics.py  naming.py  rich.py  session.py  session_claude_io.py  session_models.py  session_monitor.py  session_recovery.py  telegram_sender.py  terminal_parser.py  tmux_manager.py  transcribe.py  transcript_format.py  transcript_parser.py  usage.py  voice_install.py
tests/: test_askuser_multiquestion.py  test_askuser_multiselect.py  test_card_dup_repost.py  test_card_page_counter.py  test_conflict_exit.py  test_kb_mode_debounce.py  test_kb_prompt_sanitize.py  test_pending_text_ttl.py  test_resume_summary_ui.py  test_stalled_card.py  test_supervisor_singleton.py  test_typing_throttle.py
tests/ccbot/: test_bot_common.py  test_config.py  test_forward_command.py  test_help.py  test_hook.py  test_html_converter.py  test_local_terminal.py  test_logging_setup.py  test_markdown_v2.py  test_metrics.py  test_naming.py  test_orphan_cleanup.py  test_quota_alerts.py  test_rich_messages.py  test_session.py  test_session_claude_io.py  test_session_dm.py  test_usage.py  (+7 more)
(+75 files in other folders)
